second commit of edits based on comments